fix: made outlink icon visible if only item as link

--- a/src/components/Card/styles/WorkCard.module.scss
+++ b/src/components/Card/styles/WorkCard.module.scss
@@ -5,7 +5,7 @@
     overflow: hidden;
     height: fit-content;
     text-align: center;
-    transition: box-shadow 0.3s ease, background-color 0.3s ease, transform .2s ease, flex-basis .35s ease,;
+    transition: box-shadow 0.3s ease, background-color 0.3s ease, transform .2s ease,;
     width: 23%;
     padding: 0 0.5em;
     margin-bottom: 2em;
